[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Tiles/new_blank.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Futura Extra Black font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/torch_unlit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Levels.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Light.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tiles/invalid.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.203922, 0.0156863, 0.396078, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Levels" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="TextureRect" parent="."]
modulate = Color( 1, 0.678431, 0.611765, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 341.0
margin_top = 14.0
margin_right = 682.0
margin_bottom = 75.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Level Select"
text = "Level Select"
scroll_active = false

[node name="LevelLabels" type="RichTextLabel" parent="."]
visible = false
margin_left = 108.0
margin_top = 183.0
margin_right = 946.0
margin_bottom = 446.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Level 1 						Level 2 						Level 3 						Level 4 						Level 5










Level 6 						Level 7 						Level 8 						Level 9 						Level 10
"
text = "Level 1 						Level 2 						Level 3 						Level 4 						Level 5










Level 6 						Level 7 						Level 8 						Level 9 						Level 10
"
scroll_active = false

[node name="Levels" type="Node2D" parent="."]

[node name="Tutorial" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 948.0
margin_top = 10.0
margin_right = 988.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="TutorialLabel" type="RichTextLabel" parent="Levels"]
margin_left = 923.0
margin_top = 59.0
margin_right = 1023.0
margin_bottom = 79.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Tutorial"
text = "Tutorial"
scroll_active = false

[node name="Level1" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 120.0
margin_top = 145.0
margin_right = 160.0
margin_bottom = 185.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel" type="RichTextLabel" parent="Levels"]
margin_left = 112.0
margin_top = 180.0
margin_right = 212.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 1"
text = "Level 1"
scroll_active = false

[node name="Level2" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 305.0
margin_top = 145.0
margin_right = 345.0
margin_bottom = 185.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel2" type="RichTextLabel" parent="Levels"]
margin_left = 297.0
margin_top = 180.0
margin_right = 397.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 2
"
text = "Level 2
"
scroll_active = false

[node name="Level3" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 490.0
margin_top = 145.0
margin_right = 530.0
margin_bottom = 185.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel3" type="RichTextLabel" parent="Levels"]
margin_left = 482.0
margin_top = 180.0
margin_right = 582.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 3
"
text = "Level 3
"
scroll_active = false

[node name="Level4" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 675.0
margin_top = 145.0
margin_right = 715.0
margin_bottom = 185.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel4" type="RichTextLabel" parent="Levels"]
margin_left = 667.0
margin_top = 180.0
margin_right = 767.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 4
"
text = "Level 4
"
scroll_active = false

[node name="Level5" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 860.0
margin_top = 145.0
margin_right = 900.0
margin_bottom = 185.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel5" type="RichTextLabel" parent="Levels"]
margin_left = 852.0
margin_top = 180.0
margin_right = 952.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 5"
text = "Level 5"
scroll_active = false

[node name="Level6" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 120.0
margin_top = 300.0
margin_right = 160.0
margin_bottom = 340.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel6" type="RichTextLabel" parent="Levels"]
margin_left = 112.0
margin_top = 335.0
margin_right = 212.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 6"
text = "Level 6"
scroll_active = false

[node name="Level7" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 305.0
margin_top = 300.0
margin_right = 345.0
margin_bottom = 340.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel7" type="RichTextLabel" parent="Levels"]
margin_left = 297.0
margin_top = 335.0
margin_right = 397.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 7"
text = "Level 7"
scroll_active = false

[node name="Level8" type="TextureButton" parent="Levels" groups=["lvlb"]]
margin_left = 490.0
margin_top = 300.0
margin_right = 530.0
margin_bottom = 340.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LevelLabel8" type="RichTextLabel" parent="Levels"]
margin_left = 482.0
margin_top = 335.0
margin_right = 582.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 8
"
text = "Level 8
"
scroll_active = false

[node name="Level9" type="TextureButton" parent="Levels" groups=["lvlb"]]
visible = false
margin_left = 678.0
margin_top = 303.0
margin_right = 710.0
margin_bottom = 335.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true

[node name="LevelLabel9" type="RichTextLabel" parent="Levels"]
visible = false
margin_left = 667.0
margin_top = 335.0
margin_right = 767.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 9
"
text = "Level 9
"
scroll_active = false

[node name="Level10" type="TextureButton" parent="Levels" groups=["lvlb"]]
visible = false
margin_left = 866.0
margin_top = 305.0
margin_right = 898.0
margin_bottom = 337.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true

[node name="LevelLabel10" type="RichTextLabel" parent="Levels"]
visible = false
margin_left = 852.0
margin_top = 335.0
margin_right = 952.0
margin_bottom = 355.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Level 10"
text = "Level 10"
scroll_active = false

[connection signal="pressed" from="Levels/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Levels/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Levels/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Levels/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Levels/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Levels/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Levels/Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Levels/Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Levels/Level8" to="." method="_on_Level8_pressed"]
[connection signal="pressed" from="Levels/Level9" to="." method="_on_Level9_pressed"]
[connection signal="pressed" from="Levels/Level10" to="." method="_on_Level10_pressed"]
